--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>CSV to HTML Table</title>
-    <meta name="author" content="Derek Eder">
-    <meta content="Display any CSV file as a searchable, filterable, pretty HTML table" />
+
+	<title>EVE Blueprint Caculator</title>
+    <meta name="author" content="Notwojack">
+    <meta content="Caculate the value of blueprint" />
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,25 +21,16 @@
     <![endif]-->
   </head>
 
-  <body>
-    <div class="container-fluid">
+  <body style="width:600px;>
+    <div class="container">
 
-      <h2>CSV to HTML Table</h2>
+      <h2>EVE blueprint caculator</h2>
 
-      <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a href='https://github.com/derekeder/csv-to-html-table'>Code on GitHub</a>.</p>
-
-      <p>Here's a table of Health Clinics from the <a href='https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93'>City of Chicago Data Portal</a>.</p>
+      <p>Caculate the value of blueprint.</p>
       
       <div id='table-container'></div>
 
     </div><!-- /.container -->
-
-    <footer class='footer'>
-      <div class='container-fluid'>
-        <hr />
-        <p class='pull-right'><a href='https://github.com/derekeder/csv-to-html-table'>CSV to HTML Table</a> by <a href='http://derekeder.com'>Derek Eder</a></p>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -52,20 +44,13 @@
 
 
     <script type="text/javascript">
-      function format_link(link){
-        if (link)
-          return "<a href='" + link + "' target='_blank'>" + link + "</a>";
-        else
-          return "";
-      }
-
+     
       CsvToHtmlTable.init({
-        csv_path: 'data/Manufacturing Calculations Export - 08172018.csv',
+        csv_path: 'data/data.csv',
         element: 'table-container', 
-        allow_download: true,
+        allow_download: false,
         csv_options: {separator: ',', delimiter: '"'},
-        datatables_options: {"paging": false},
-        custom_formatting: [[4, format_link]]
+        datatables_options: {"scrollY": 600,"paging": false,"scrollCollapse": true,},
       });
     </script>
   </body>
