--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dataTables.bootstrap.css" rel="stylesheet">
+<style>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script type="text/javascript" src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+.content {
+    max-width: 700px;
+    margin: auto;
+    background: white;
+    padding: 10px;
+}
+</style>
   </head>
 
-  <body style="width:600px;>
-    <div class="container">
+  <body >
+    <div class="content">
 
       <h2>EVE blueprint caculator</h2>
 
-      <p>Material and product value caculate by Jita buy price</p>
+      <p>Caculate the value of blueprint.</p>
       
       <div id='table-container'></div>
 
@@ -46,11 +49,11 @@
     <script type="text/javascript">
      
       CsvToHtmlTable.init({
-        csv_path: 'data/data.csv',
+		csv_path: 'data/data.csv',
         element: 'table-container', 
         allow_download: false,
         csv_options: {separator: ',', delimiter: '"'},
-        datatables_options: {"scrollY": 500,"paging": false,"scrollCollapse": true,},
+        datatables_options: {"paging": true,"pageLength":15,"info":false,"lengthChange": false},
       });
     </script>
   </body>
