--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <h2>EVE blueprint caculator</h2>
 
-      <p>Caculate the value of blueprint.</p>
+      <p>Material and product value caculate by Jita buy price</p>
       
       <div id='table-container'></div>
 
